# LLama-from-scratch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bpe_tokenizer  bpe_tokenizer.model  bpe_tokenizer.vocab  bpe_trainer.cpp  data_downloader.py  get_slice  llamascratch  test_entry_point  wikitext-2-test.txt
data/: quant_mech.txt
include/: dataloader.h  embeddings.h  flash_attention.h  rms_norm.h  tensor.h
src/: dataloader.cpp  embeddings.cpp  kernel_test.cu  kernels.cu  main.cpp  rms_norm.cpp  tensor.cpp  tensor_py.cpp  tokenizer.model
tests/: at_mul_test.h  bench_ops.h  change_dtype.h  dataloading.h  embed_tests.h  entry_point.cpp  get_slice.cpp  get_slice.h  matmul.h  matmul_benchmark.h  operation_tests.h  reshape.h  rms_norm_test.h  set_children.h  set_slice.h  stacking.h  tens.py  test_cuda  test_cuda.cu
